--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" css/port.css">
+  <link rel="stylesheet" href="css/port.css">
   <link rel="stylesheet" href="responsive/port-res.css">
   <link rel="stylesheet" href="PHP/port.php">
   <link href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" rel="stylesheet">
