--- a/index.html
+++ b/index.html
@@ -696,6 +696,11 @@ footer {
   color: black;
 }
     </style>
+  <script src = "jQuery/jquery-3.5.1.min.js"></script>
+  <script src = "jQuery/jquery-ui.min.js"></script>
+  <script src = "jQuery/jquery-1.10.2.min.js"></script>
+  <script src = "jQuery/jquery-ui-1.10.3.custom.min.js"></script>
+  <script src = "jQuery/modernizr.custom.min.js"></script>
   <script>
     // スライダーの設定
 $(function(){
