--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/port.css">
+  <link rel="stylesheet" href="https://yu-spec.github.io/port.css">
   <link rel="stylesheet" href="responsive/port-res.css">
   <link rel="stylesheet" href="PHP/port.php">
   <script src = "jQuery/jquery-3.5.1.min.js"></script>
