--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://yu-spec.github.io/port.css">
-  <link rel="stylesheet" href="responsive/port-res.css">
-  <link rel="stylesheet" href="PHP/port.php">
-  <script src = "jQuery/jquery-3.5.1.min.js"></script>
-  <script src = "jQuery/jquery-ui.min.js"></script>
-  <script src = "jQuery/jquery-1.10.2.min.js"></script>
-  <script src = "jQuery/jquery-ui-1.10.3.custom.min.js"></script>
-  <script src = "jQuery/modernizr.custom.min.js"></script>
-  <script src = "jQuery/port.js"></script>
-  <link rel="stylesheet" href="PHP/port.php">
+  <link rel="stylesheet" href="https://yu-spec.github.io/port-res.css">
+  <script src = "https://yu-spec.github.io/jquery-3.5.1.min.js"></script>
+  <script src = "https://yu-spec.github.io/jquery-ui.min.js"></script>
+  <script src = "https://yu-spec.github.io/jquery-1.10.2.min.js"></script>
+  <script src = "https://yu-spec.github.io/jquery-ui-1.10.3.custom.min.js"></script>
+  <script src = "https://yu-spec.github.io/modernizr.custom.min.js"></script>
+  <script src = "https://yu-spec.github.io/port.js"></script>
   <link href="https://use.fontawesome.com/releases/v5.10.2/css/all.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sawarabi+Mincho" rel="stylesheet">
   <script src = "jQuery/port.js"></script>
