--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="about" id = "about">
     <div class="about-box">
       <div class="about-photo scrollanime updown">
-        <img src="images/profile1.jpg" alt="">
+        <img src="https://yu-spec.github.io/images/profile1.jpg" alt="">
       </div>
       <div class="about-profile scrollanime">
         <div class="about-title">
