--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <!-- aboutsp(@media only screen and (max-width: 768px))対応 -->
         <div class="about-photosp scrollanime updown">
-          <img src="images/profile1.jpg" alt="">
+          <img src="https://yu-spsec.github.io/profile1.jpg" alt="">
         </div>
         <!--profile-->
         <div class = "profile scrollanime updown">
@@ -223,13 +223,13 @@
    </div>
    <div class="work-content">
      <div class="work-box scrollanime updown" data-modal-link = "modal1">
-       <img src="images/isara photo1.png" alt="">
+       <img src="https://yu-spec.github.io/isara photo1.png" alt="">
      </div>
      <div class="work-box scrollanime updown" data-modal-link = "modal2">
-       <img src="images/port photo.png" alt="">
+       <img src="https://yu-spec.github.io/port photo.png" alt="">
      </div>
      <div class="work-box scrollanime updown" data-modal-link = "modal3">
-       <img src="images/sample company.png" alt="">
+       <img src="https://yu-spec.github.io/sample company.png" alt="">
      </div>
    </div>
    <!-- modal1 -->
@@ -245,7 +245,7 @@
            <!-- inner-left -->
            <div class="inner-left">
              <a href="file:///Users/takahashi/Documents/LP案件%E3%80%80模写（練習）/コーディング/isara%20模写/コーディング/isara.html">
-               <img src="images/isara photo1.png" alt="">
+               <img src="https://yu-spec.github.io/isara photo1.png" alt="">
              </a>
            </div>
            <!-- inner-right -->
@@ -275,7 +275,7 @@
            <!-- inner-left -->
            <div class="inner-left">
              <a href="file:///Users/takahashi/Documents/My%20Portfolio/port.html#contact">
-               <img src="images/port photo.png" alt="">
+               <img src="https://yu-spec.github.io/port photo.png" alt="">
              </a>
            </div>
            <!-- inner-right -->
@@ -305,7 +305,7 @@
            <!-- inner-left -->
            <div class="inner-left">
              <a href="file:///Users/takahashi/Documents/LP案件%E3%80%80模写（練習）/コーディング/sample%20company/sample1.html">
-             <img src="images/sample company.png" alt="">
+             <img src="https://yu-spec.github.io/sample company.png" alt="">
            </a>
            </div>
            <!-- inner-right -->
@@ -330,7 +330,7 @@
    <div class="blog-content">
      <div class="blog-box scrollanime updown" data-modal-link = "modal1">
        <a href="https://yu-design.info/coding-editor/">
-       <img src="images/content1.jpg" alt="">
+       <img src="https://yu-spec.github.io/content1.jpg" alt="">
        <div class="blog-text">
          <h3 class="txts">HTMLを初心者がコーディングする際におすすめの無料エディタ 3選</h3>
          <p class="txtxs">初心者〜上級者まで使える幅の広い無料エディタを紹介しています。</p>
@@ -339,7 +339,7 @@
      </div>
      <div class="blog-box scrollanime updown" data-modal-link = "modal2">
        <a href="https://yu-design.info/wordpress-difficult/">
-       <img src="images/content2.jpg" alt="">
+       <img src="https://yu-spec.github.io/content2.jpg" alt="">
        <div class="blog-text">
          <h3 class="txts">WordPressが初心者に難しい理由｜WordPress初心者が解説</h3>
          <p class="txtxs">WordPressのどの部分が難しいのか初心者が体験を踏まえながら解説しています。</p>
@@ -348,7 +348,7 @@
      </div>
      <div class="blog-box blog-boxlast scrollanime updown" data-modal-link = "modal3">
        <a href="https://yu-design.info/three-language/">
-       <img src="images/content3.jpg" alt="">
+       <img src="https://yu-spec.github.io/content3.jpg" alt="">
        <div class="blog-text">
          <h3 class="txts">模写作業をするならProgate3つの言語を学ぶべき！</h3>
          <p class="txtxs">初心者がコーディングできるまでの過程や最初に学ぶべき3つの言語について解説しています。</p>
