--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
         <!-- aboutsp(@media only screen and (max-width: 768px))対応 -->
         <div class="about-photosp scrollanime updown">
-          <img src="https://yu-spsec.github.io/profile1.jpg" alt="">
+          <img src="https://yu-spec.github.io/profile1.jpg" alt="">
         </div>
         <!--profile-->
         <div class = "profile scrollanime updown">
