--- a/index.html
+++ b/index.html
@@ -239,14 +239,12 @@
        <div class="modal-cont">
          <div class="inner-top">
            <h2 class="txtm">isara模写サイト</h2>
-           <p class="txtxs">HTML・CSS・jQuery</p>
+           <p class="txtxs">HTML・CSS・jQuery・レスポンシブ対応済み</p>
          </div>
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-             <a href="file:///Users/takahashi/Documents/LP案件%E3%80%80模写（練習）/コーディング/isara%20模写/コーディング/isara.html">
-               <img src="https://yu-spec.github.io/isara photo1.png" alt="">
-             </a>
+               <img src="https://yu-spec.github.io/isara allphoto.png" alt="">
            </div>
            <!-- inner-right -->
            <div class="inner-right">
@@ -269,14 +267,13 @@
        <div class="modal-cont">
          <div class="inner-top">
            <h2 class="txtm">My Portfolio</h2>
-           <p class="txtxs">HTML・CSS・jQuery</p>
+           <p class="txtxs">HTML・CSS・jQuery・レスポンシブ対応済み</p>
          </div>
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-             <a href="file:///Users/takahashi/Documents/My%20Portfolio/port.html#contact">
-               <img src="https://yu-spec.github.io/port photo.png" alt="">
-             </a>
+               <img src="https://yu-spec.github.io/portfolio allphoto.png" alt="">
+           <div class="inner-left">
            </div>
            <!-- inner-right -->
            <div class="inner-right">
@@ -298,23 +295,21 @@
        <div class="modal-bg"></div>
        <div class="modal-cont">
          <div class="inner-top">
-           <h2 class="txtm">Airbnb模写サイト</h2>
-           <p class="txtxs">HTML・CSS・jQuery</p>
+           <h2 class="txtm">架空会社サイト</h2>
+           <p class="txtxs">HTML・CSS・レスポンシブ対応済み</p>
          </div>
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-             <a href="file:///Users/takahashi/Documents/LP案件%E3%80%80模写（練習）/コーディング/sample%20company/sample1.html">
-             <img src="https://yu-spec.github.io/sample company.png" alt="">
-           </a>
+             <img src="https://yu-spec.github.io/samplecompany allphoto.png" alt="">
            </div>
            <!-- inner-right -->
            <div class="inner-right">
              <h3 class="txtm">制作時間</h3>
              <p class="txtxs">10h</p>
              <h3 class="txtm">概要</h3>
-             <p class="txtxs">Airbnbの模写では、２カラムにする部分が多く存在し
-             あらゆるコードを駆使しながら制作することが出来ました。</p>
+             <p class="txtxs">およそ５Pに渡ってのWEBサイトを制作しました。
+             <br>苦戦しつつも速さを重視して製作することが出来ました。</p>
            </div>
          </div>
        </div>
