--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-               <img src="https://yu-spec.github.io/isara allphoto.png" alt="">
+             <a href = "#">
+               <img src="https://yu-spec.github.io/isara photo1.png" alt="">
+             </a>
            </div>
            <!-- inner-right -->
            <div class="inner-right">
@@ -272,7 +274,9 @@
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-               <img src="https://yu-spec.github.io/portfolio allphoto.png" alt="">
+             <a href = "#">
+               <img src="https://yu-spec.github.io/port photo.png" alt="">
+             </a>
            </div>
            <!-- inner-right -->
            <div class="inner-right">
@@ -300,7 +304,9 @@
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-             <img src="https://yu-spec.github.io/samplecompany allphoto.png" alt="">
+             <a href = "#">
+             <img src="https://yu-spec.github.io/samplecompany photo.png" alt="">
+               </a>
            </div>
            <!-- inner-right -->
            <div class="inner-right">
