--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
            <!-- inner-left -->
            <div class="inner-left">
              <a href = "#">
-             <img src="https://yu-spec.github.io/samplecompany photo.png" alt="">
+             <img src="https://yu-spec.github.io/sample company.png" alt="">
                </a>
            </div>
            <!-- inner-right -->
