--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-             <a href = "#">
+             <a href = "https://yu-spec.github.io/samplecompany.github.io/">
              <img src="https://yu-spec.github.io/sample company.png" alt="">
                </a>
            </div>
