--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
          <div class="inner-cont">
            <!-- inner-left -->
            <div class="inner-left">
-             <a href = "#">
+             <a href = "https://yu-spec.github.io/isara-demo.github.io/">
                <img src="https://yu-spec.github.io/isara photo1.png" alt="">
              </a>
            </div>
