--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <script src="https://unpkg.com/ityped@1.0.3"></script>
       <script>
          ityped.init(document.querySelector("#header-title"), {
-           strings: ['Hello!I`m yu  ', 'Welcome to yu-design!'],        //表示させたい文字の設定 区切りはカンマ
+           strings: ['Hello!I`m yu  ', 'Welcome to <br>yu-design!'],        //表示させたい文字の設定 区切りはカンマ
            startDelay: 200,                                                  //アニメーション開始までの遅延、大きいほど遅れる
            typeSpeed: 100,                                                   //表示させるスピード、大きいほどゆっくり
            loop: false,                                                      //ループ
